Reduce usage of `StringUtils`